--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build: .
     volumes:
       - .:/app
+    ports:
+      - "8181:8181"
 
   mysql:
     image: mysql:5.7
@@ -15,8 +17,8 @@ services:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=orders
       - MYSQL_PASSWORD=root
-    volumes:
-      - ./.docker/mysql:/var/lib/mysql
+    # volumes:
+    #   - ./.docker/mysql:/var/lib/mysql
 
   rabbitmq:
     image: rabbitmq:3.8.16-management
